# crew-ai-tenders-agent

./: .gitignore  CLAUDE.md  Реестр_проектов_ЧИСТЫЙ.xlsx
tajikistan_pipe_monitor/: .env.example  AGENT_CODING_PROMPT.md  README.md  main.py  pyproject.toml
tajikistan_pipe_monitor/config/: agents.yaml  tasks.yaml
tajikistan_pipe_monitor/src/: crew.py
tajikistan_pipe_monitor/src/agents/: __init__.py  contacts.py  details.py  pipe_checker.py  reporter.py  risk_analyst.py  scout.py
tajikistan_pipe_monitor/src/models/: __init__.py  tender.py
tajikistan_pipe_monitor/src/tasks/: __init__.py  contact_task.py  details_task.py  pipe_task.py  report_task.py  risk_task.py  scout_task.py
tajikistan_pipe_monitor/src/tools/: __init__.py  ddg_search.py  excel_writer.py  parallel_fetcher.py  rss_reader.py  web_scraper.py
таблица excel 3ий/: excel.py
