[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tajikistan_pipe_monitor"
version = "0.1.0"
description = "CrewAI Tajikistan Pipe Monitor"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "crewai[google-genai]>=0.80.0",
    "crewai-tools>=0.14.0",
    "openpyxl>=3.1.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "feedparser>=6.0.11",
    "lxml>=5.0.0",
    "fake-useragent>=2.0.0",
    "duckduckgo-search>=7.0.0",
    "google-generativeai>=0.8.0",
    "litellm>=1.40.0",
    "pyyaml>=6.0",
    "firecrawl-py>=4.28.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
